@@ -1,5 +1,6 @@
 [4.0.0]
 - Removed Slick dependency, images now generate in headless JVM
+- Added backgroundColor and premultiplyAlpha options
 
 [3.0.1]
 - Improved memory consumption
